--- a/starterOnly/public/modal.css
+++ b/starterOnly/public/modal.css
@@ -14,7 +14,6 @@ body {
   margin: 0;
   display: flex;
   flex-direction: column;
-  /* background-image: url("background.png"); */
   font-family: var(--font-default);
   font-size: 18px;
   max-width: 1300px;
@@ -69,43 +68,6 @@ img {
 }
 .errorMsg {
   font-size: 0.8rem;
-}
-
-@media screen and (max-width: 768px) {
-  .topnav a {
-    display: none;
-  }
-  .topnav a.icon {
-    float: right;
-    display: block;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .topnav.responsive {
-    position: relative;
-  }
-  .topnav.responsive .icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-}
-
-@media screen and (max-width: 540px) {
-  .topnav a {
-    display: none;
-  }
-  .topnav a.icon {
-    float: right;
-    display: block;
-    margin-top: -15px;
-  }
 }
 
 main {
@@ -522,6 +484,74 @@ footer {
   }
 }
 
+@media screen and (max-width: 768px) {
+  .topnav a {
+    display: none;
+  }
+  .topnav a.icon {
+    float: right;
+    display: block;
+    color: #f00;
+  }
+  .topnav a.icon:hover {
+    color: #fff;
+  }
+  .topnav.responsive {
+    position: relative;
+  }
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  .hero-headline {
+    font-size: 2.5rem;
+  }
+}
+
+@media screen and (max-width: 540px) {
+  .topnav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .topnav a {
+    display: none;
+  }
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+  .header-logo {
+    width: 50%;
+  }
+  .header-logo img {
+    height: auto;
+    width: 100%;
+  }
+  .hero-content {
+    min-width: 0;
+    font-size: 1.5em;
+    padding: 0 0 20px 0;
+  }
+  .hero-headline {
+    font-size: 0.8em;
+    font-weight: bold;
+  }
+  .hero-text {
+    font-size: 0.4em;
+    margin-top: 1rem;
+  }
+  .hero-img img {
+    margin-top: 0;
+  }
+}
+/* Arrivée de la modale */
 @keyframes modalopen {
   from {
     opacity: 0;
