--- a/starterOnly/public/modal.css
+++ b/starterOnly/public/modal.css
@@ -193,12 +193,7 @@ input {
 .formData[data-error-visible="true"] .text-control {
   border: 2px solid #e54858;
 }
-/* 
-input[data-error]::after {
-    content: attr(data-error);
-    font-size: 0.4em;
-    color: red;
-} */
+
 .checkbox-label,
 .checkbox2-label {
   position: relative;
@@ -440,6 +435,20 @@ input[data-error]::after {
 .hero-section > .btn-signup {
   display: none;
 }
+/* modale de confirmation */
+/* .content-confirm {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  height: 80vh;
+  width: 35%;
+}
+.message {
+  text-align: center;
+  width: 60%;
+} */
+
 footer {
   padding-left: 2vw;
   padding-right: 2vw;
