--- a/public/css/modal.css
+++ b/public/css/modal.css
@@ -530,7 +530,7 @@ footer {
   .topnav {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    /* align-items: center; */
   }
   .topnav a {
     display: none;
