--- a/public/css/modal.css
+++ b/public/css/modal.css
@@ -21,7 +21,7 @@ body {
 }
 
 p {
-  margin-bottom: 0;
+  margin: 0;
   padding: 0.5vw;
 }
 
@@ -57,6 +57,7 @@ img {
   background-color: #ff0000;
   color: #ffffff;
   border-radius: 15px;
+  text-decoration: underline;
 }
 
 .topnav a.active {
@@ -374,11 +375,13 @@ input {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   overflow: hidden;
-  box-shadow: 0 2px 7px 2px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 5px 9px 2px rgba(0, 0, 0, 0.5);
   margin-bottom: 10px;
 }
 .hero-content {
-  padding: 51px 67px;
+  padding-top: 51px;
+  padding-bottom: 51px;
+  padding-left: 67px;
   grid-column: span 4;
   background: #232323;
   color: #fff;
@@ -387,7 +390,7 @@ input {
   justify-items: center;
   align-items: center;
 }
-.hero-content::after {
+/* .hero-content::after {
   content: "";
   width: 100%;
   height: 100%;
@@ -395,7 +398,7 @@ input {
   position: absolute;
   right: -80px;
   top: 0;
-}
+} */
 .hero-content > * {
   position: relative;
   z-index: 1;
@@ -406,7 +409,7 @@ input {
   white-space: nowrap;
 }
 .hero-text {
-  width: 146%;
+  width: 40%;
   font-weight: normal;
   margin-top: 57px;
   padding: 0;
@@ -421,12 +424,14 @@ input {
 }
 .hero-img {
   grid-column: span 8;
+  position: relative;
 }
 .hero-img img {
   width: 100%;
   height: 100%;
   display: block;
   padding: 0;
+  object-fit: cover;
 }
 .copyrights {
   color: #fe142f;
@@ -437,6 +442,21 @@ input {
 }
 .hero-section > .btn-signup {
   display: none;
+}
+/* gestion msg erreur */
+.contain-error:focus-within input,
+.contain-error.input-error input {
+  border: 2px solid red;
+}
+
+span.error-msg {
+  color: #f00;
+  font-size: 1rem;
+  display: none;
+}
+.contain-error:focus-within span.visible,
+.contain-error.input-error span.visible {
+  display: block !important;
 }
 /* modale de confirmation */
 .content-confirm {
@@ -450,6 +470,7 @@ input {
 .message {
   text-align: center;
   width: 60%;
+  font-weight: normal;
 }
 
 footer {
@@ -567,6 +588,19 @@ footer {
   }
   .copyrights {
     margin-top: 25px;
+  }
+  .bground {
+    background-color: rgba(26, 39, 156, 0);
+  }
+  .content {
+    margin: 20% auto 0 auto;
+    border-radius: 10px 10px 0 0;
+  }
+  .modal-body {
+    margin: 0;
+  }
+  label + .text-label {
+    font-size: 0.5rem;
   }
 }
 /* Arrivée de la modale */
