--- a/public/css/modal.css
+++ b/public/css/modal.css
@@ -388,18 +388,8 @@ input {
   color: #fff;
   position: relative;
   text-align: left;
-  justify-items: center;
-  align-items: center;
 }
-.hero-content::after {
-  content: "";
-  width: 100%;
-  height: 100%;
-  background: #232323;
-  position: absolute;
-  right: -80px;
-  top: 0;
-}
+
 .hero-content > * {
   position: relative;
   z-index: 1;
@@ -413,6 +403,9 @@ input {
   font-weight: normal;
   margin-top: 57px;
   padding: 0;
+  text-align: left;
+  /* max-width: 40%; */
+  width: 100%;
 }
 .btn-signup {
   outline: none;
@@ -502,6 +495,7 @@ footer {
   .hero-text {
     width: unset;
     font-size: 1.5rem;
+    max-width: none;
   }
   .hero-img img {
     border-radius: 10px;
@@ -580,6 +574,7 @@ footer {
   .hero-text {
     font-size: 0.4em;
     margin-top: 1rem;
+    max-width: none;
   }
   .hero-img img {
     margin-top: 0;
